==================
### 1.7.0
==================

TODO:
- Write player name cache to file?

*** INCOMPATIBLE CHANGES ***:
- NPC IDs are no longer supported, you must use the location syntax.
- A few more statuses have been renamed such as 'Cartboost' status renamed
  to 'Cart Boost' for consistency with the skill name.
- \$remote_socket parameter removed from some Network/Send.pm functions:
  sendCartAdd sendCartGet
- hp, sp options now have a new format.
  hp > 50  - means more than 50hp
  hp > 50% - means more than 50 percent of you hp.
- Old hp_upper,sp_upper removed use hp sp instead
  Old minAggressives, maxAggressives options removed use aggressives instead
- You must use the new tables/emotions.txt or emotions won't work.
  The "e" command now uses the RO client commands instead of the number.
- Vigor condensation renamed to Vigor Condensation for consistency
- equipAuto onTeleport changed to teleportAuto_equip_{slot}

Bug fixes:
- 'i' command now displays equipped arrows under Equipment (Equipped).
- Quick-and-dirty @{$char->{inventory}} > 0 fix for useSelf_item
  dcOnEmpty. (Will fail if your bot doesn't carry anything at all.)
- Same quick-and-dirty fix for "Auto-storaging due to insufficient ___".
- Don't try to statsAddAuto before the stat point info has been received.
- Equipped arrows will now show how many of them are left.
- Shop title in shop.txt is detected better.
- Don't send name request for perfectly hidden players and NPCs.
- Fix autoTalkCont causing next step to happen too fast.
- Don't redirect command output if XKore_silent is enabled.
- Fix "party leave" crash when not in party.
- Only teleport-on-hit from monsters if they do not miss.
- Hopefully fix daggersins' weapons ending up on the wrong hand.
- "Player Connected" did not trigger 'player' plugin call.
- Guild auto deny timeout was not included in timeouts.txt.
  Deal auto deny timeout was not being used.
- Increase the maximum vending price to 99,990,000z.